--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization-sharp (1.2-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Mon, 30 Nov 2009 19:46:41 +0100
+
 liboptimization-sharp (1.1-1) UNRELEASED; urgency=low
 
   * New upstream release 
