--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization-sharp (1.3-1) UNRELEASED; urgency=low
+
+  * New upstream release 
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Tue, 09 Feb 2010 17:49:22 +0100
+
 liboptimization-sharp (1.2-1) UNRELEASED; urgency=low
 
   * New upstream release
