--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization-sharp (1.4-1) UNRELEASED; urgency=low
+
+  * New upstream release 
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Mon, 15 Feb 2010 21:55:40 +0100
+
 liboptimization-sharp (1.3-1) UNRELEASED; urgency=low
 
   * New upstream release 
