--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization-sharp (1.5-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Wed, 17 Feb 2010 14:21:27 +0100
+
 liboptimization-sharp (1.4-1) UNRELEASED; urgency=low
 
   * New upstream release 
