--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.0-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Thu, 01 Apr 2010 15:41:09 +0200
+
 liboptimization-sharp (1.5-1) UNRELEASED; urgency=low
 
   * New upstream release
