--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.1-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Wed, 21 Apr 2010 23:27:10 +0200
+
 liboptimization2-sharp (2.0-1) UNRELEASED; urgency=low
 
   * New upstream release
