--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.2-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Thu, 22 Apr 2010 14:53:52 +0200
+
 liboptimization2-sharp (2.1-1) UNRELEASED; urgency=low
 
   * New upstream release
