--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.3-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Mon, 17 May 2010 11:01:22 +0200
+
 liboptimization2-sharp (2.2-1) UNRELEASED; urgency=low
 
   * New upstream release
