--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.4-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Thu, 27 May 2010 10:15:52 +0200
+
 liboptimization2-sharp (2.3-1) UNRELEASED; urgency=low
 
   * New upstream release
