--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.6-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Fri, 28 May 2010 23:11:18 +0200
+
 liboptimization2-sharp (2.5-1) UNRELEASED; urgency=low
 
   * New upstream release
