--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.7-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Mon, 31 May 2010 15:45:37 +0200
+
 liboptimization2-sharp (2.6-1) UNRELEASED; urgency=low
 
   * New upstream release
