--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.10-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Thu, 05 Aug 2010 12:59:07 +0200
+
 liboptimization2-sharp (2.9-1) UNRELEASED; urgency=low
 
   * New upstream release
