--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.12-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Mon, 11 Oct 2010 19:45:23 +0200
+
 liboptimization2-sharp (2.11-1) UNRELEASED; urgency=low
 
   * New upstream release
