--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+liboptimization2-sharp (2.14-1) UNRELEASED; urgency=low
+
+  * New upstream release
+  * Fix bug in restarting from db
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Tue, 21 Dec 2010 13:06:46 +0100
+
 liboptimization2-sharp (2.13-1) UNRELEASED; urgency=low
 
   * New upstream release
