--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+liboptimization2-sharp (2.16-1) UNRELEASED; urgency=low
+
+  * New upstream release
+  * Make logging optional
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Mon, 22 Aug 2011 16:06:33 +0200
+
 liboptimization2-sharp (2.15-1) UNRELEASED; urgency=low
 
   * New upstream release
