--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+liboptimization2-sharp (2.17-1) UNRELEASED; urgency=low
+
+  * New upstream release
+  * Allow ommitting name in job file
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Tue, 23 Aug 2011 16:16:17 +0200
+
 liboptimization2-sharp (2.16-1) UNRELEASED; urgency=low
 
   * New upstream release
