--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+liboptimization2-sharp (2.18-1) UNRELEASED; urgency=low
+
+  * New upstream release
+  * Fix crasher bug in progress reporting
+
+ -- Jesse van den Kieboom <jvanden@grijpc10.epfl.ch>  Thu, 22 Sep 2011 18:25:37 +0200
+
 liboptimization2-sharp (2.17-1) UNRELEASED; urgency=low
 
   * New upstream release
