--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+liboptimization2-sharp (2.21-1) UNRELEASED; urgency=low
+
+  * New upstream release
+  * Fixed issue in resuming job from file
+
+ -- Jesse van den Kieboom <jvanden@biorobpc21.epfl.ch>  Tue, 13 Mar 2012 13:25:07 +0100
+
 liboptimization2-sharp (2.20-1) UNRELEASED; urgency=low
 
   * New upstream release
