--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+liboptimization2-sharp (2.22-1) precise; urgency=low
+
+  * New upstream version 2.22 for precise
+
+ -- Alexandre Tuleu <alexandre.tuleu.2005@polytechnique.org>  Wed, 30 May 2012 18:04:13 +0200
+
 liboptimization2-sharp (2.21-1) UNRELEASED; urgency=low
 
   * New upstream release
